[gd_scene load_steps=5 format=3 uid="uid://dpp7sbrblkrmg"]

[ext_resource type="Script" path="res://Scripts/plan_visualizer/plan_vis_action.gd" id="1_dhvaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtyjt"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.184314, 0.462745, 0.470588, 1)
border_color = Color(0.184314, 0.462745, 0.470588, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id="Theme_5gpsw"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_vtyjt")

[sub_resource type="Theme" id="Theme_722it"]
default_font_size = 36

[node name="Action" type="HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 180)
offset_right = 450.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_constants/separation = 20
script = ExtResource("1_dhvaq")

[node name="Panel" type="PanelContainer" parent="."]
auto_translate_mode = 1
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_5gpsw")

[node name="ActionDescriptionContainer" type="VBoxContainer" parent="Panel"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="ActionName" type="Label" parent="Panel/ActionDescriptionContainer"]
auto_translate_mode = 1
layout_mode = 2
theme = SubResource("Theme_722it")
theme_override_colors/font_color = Color(0.542301, 0.887228, 0.896052, 1)
text = "<action name>"

[node name="ActionText" type="Label" parent="Panel/ActionDescriptionContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.886275, 0.894118, 1)
theme_override_font_sizes/font_size = 24
text = "<action text>"
autowrap_mode = 2

[connection signal="gui_input" from="Panel" to="." method="_on_action_description_gui_input"]
